fix(site): Dark mode date color

--- a/web/src/components/Common/BlogPost/BlogPost.module.scss
+++ b/web/src/components/Common/BlogPost/BlogPost.module.scss
@@ -138,7 +138,7 @@
   }
 
   .DateWrapper {
-    // color: $color-primary-yellow;
+    color: $color-primary-white;
   }
 
   .HighlightedText p {
